<?xml version="1.0" encoding="utf-8"?>
<!-- the preview stays in view above the options, which scroll under it where the screen is short -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_holder"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/dialog_folder_sample_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_margin"
        android:paddingTop="@dimen/activity_margin"
        android:paddingRight="@dimen/activity_margin"
        android:paddingBottom="@dimen/medium_margin" />

    <include layout="@layout/divider" />

    <ScrollView
        android:id="@+id/dialog_scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/dialog_options_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_margin"
            android:paddingRight="@dimen/activity_margin">

            <RadioGroup
                android:id="@+id/dialog_radio_folder_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginBottom="@dimen/medium_margin">

                <org.fossify.commons.views.MyCompatRadioButton
                    android:id="@+id/dialog_radio_folder_square"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/medium_margin"
                    android:paddingBottom="@dimen/medium_margin"
                    android:text="@string/square" />

                <org.fossify.commons.views.MyCompatRadioButton
                    android:id="@+id/dialog_radio_folder_rounded_corners"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/medium_margin"
                    android:paddingBottom="@dimen/medium_margin"
                    android:text="@string/rounded_corners" />

                <org.fossify.commons.views.MyCompatRadioButton
                    android:id="@+id/dialog_radio_folder_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/medium_margin"
                    android:paddingBottom="@dimen/medium_margin"
                    android:text="@string/folder_style_card" />

                <org.fossify.commons.views.MyCompatRadioButton
                    android:id="@+id/dialog_radio_folder_stack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/medium_margin"
                    android:paddingBottom="@dimen/medium_margin"
                    android:text="@string/folder_style_stack" />

            </RadioGroup>

            <org.fossify.commons.views.MyTextView
                android:id="@+id/dialog_folder_spacing_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/folder_spacing" />

            <org.fossify.commons.views.MySeekBar
                android:id="@+id/dialog_folder_spacing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/medium_margin"
                android:paddingBottom="@dimen/bigger_margin"
                android:tickMark="@drawable/folder_spacing_tick" />

            <include layout="@layout/divider" />

            <RadioGroup
                android:id="@+id/dialog_radio_folder_count_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:paddingBottom="@dimen/medium_margin">

                <org.fossify.commons.views.MyCompatRadioButton
                    android:id="@+id/dialog_radio_folder_count_line"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/medium_margin"
                    android:paddingBottom="@dimen/medium_margin"
                    android:text="@string/show_file_count_line" />

                <org.fossify.commons.views.MyCompatRadioButton
                    android:id="@+id/dialog_radio_folder_count_brackets"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/medium_margin"
                    android:paddingBottom="@dimen/medium_margin"
                    android:text="@string/show_file_count_brackets" />

                <org.fossify.commons.views.MyCompatRadioButton
                    android:id="@+id/dialog_radio_folder_count_none"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/medium_margin"
                    android:paddingBottom="@dimen/medium_margin"
                    android:text="@string/show_file_count_none" />
            </RadioGroup>

            <include layout="@layout/divider" />

            <org.fossify.commons.views.MyAppCompatCheckbox
                android:id="@+id/dialog_folder_show_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:paddingTop="@dimen/medium_margin"
                android:paddingBottom="@dimen/medium_margin"
                android:text="@string/show_folder_size" />

            <org.fossify.commons.views.MyAppCompatCheckbox
                android:id="@+id/dialog_folder_limit_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/medium_margin"
                android:paddingTop="@dimen/medium_margin"
                android:paddingBottom="@dimen/medium_margin"
                android:text="@string/limit_folder_title" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
